# CineIA

./: CMakeLists.txt  Makefile  README.md  netflix.db
src/: auth.cpp  auth.h  database.cpp  database.h  main.cpp  movie_api.cpp  movie_api.h
ssl/: certificate.crt  private.key
www/AllMov/: mov.css  mov.html  mov.js
www/FavMov/: favmov.css  favmov.html  favmov.js
www/RecMov/: rmov.css  rmov.html  rmov.js
www/Registro/: registro.css  registro.html  registro.js
www/TermsServ/: terms.css  terms.html  terms.js
www/avMov/: avmov.css  avmov.html  avmov.js
www/inicio/: inicio.css  inicio.html  inicio.js
www/privacy/: priv.css  priv.html  priv.js
www/profile/: prof.css  prof.html  prof.js
